# EP01-Paciencia-EDA

./: .gitignore  README.md  test_bug.py
.firebase/: hosting.ZnJvbnRlbmRcZGlzdA.cache
.playwright-mcp/: page-2026-04-21T23-34-06-418Z.yml  page-2026-04-21T23-35-43-698Z.yml
backend/: main.py  pyproject.toml  railway.toml  requirements.txt  valida_frontend_logic.py
backend/algoritmos/: __init__.py  comparar_ordenacao.py  embaralhamento_iterativo.py  embaralhamento_recursivo.py  ordenacao_bubble.py  ordenacao_merge.py  ordenacao_quick.py
backend/api/: __init__.py  erro_500.py  gerenciador_sessoes.py  locks_jogo.py  rotas_algoritmos.py  rotas_estruturas.py  rotas_jogo.py  schemas.py  serializacao_resposta.py
backend/modelo/: __init__.py  carta_baralho.py  criacao_baralho.py  excecao_carta.py  fila_cartas.py  lista_ligada_cartas.py  no_encadeado.py  pilha_cartas.py
backend/motor/: __init__.py  controlador_jogo.py  estado_jogo.py  regras_movimento.py
backend/paciencia_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/testes/: __init__.py  teste_baralho.py  teste_bug_cor.py  teste_cors_headers.py  teste_embaralhamento.py  teste_fila.py  teste_jogo.py  teste_lista_ligada.py  teste_mover_lista_para_pilha_concorrencia.py  teste_ordenacao.py  teste_persistencia_pilha.py  teste_pilha.py  teste_resposta_api_json.py  teste_stress_mover.py
e2e/: capturar_console.py  reproduzir_tableau_lista_lista.py  teste_cors_127_0_0_1.py
frontend/: .env.example  package-lock.json  package.json  setup_env.ps1  vite.config.ts
openspec/: config.yaml
(+53 files in other folders)
