[project]
name = "paciencia-backend"
version = "0.1.0"
description = "Backend acadêmico do jogo Paciência com estruturas de dados didáticas."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "google-cloud-firestore>=2.14.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["modelo*", "algoritmos*", "motor*", "api*"]

[tool.pytest.ini_options]
testpaths = ["testes"]
pythonpath = ["."]
python_files = ["test_*.py", "teste_*.py"]
